Add some translations

--- a/l10n/po/ja_JP/_versions/1.11/guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/mongodb-panache.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/mongodb-panache.adoc:6
 #, no-wrap
 msgid "Quarkus - Simplified MongoDB with Panache"
-msgstr ""
+msgstr "Quarkus - PanacheでシンプルになったMongoDB"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb-panache.adoc:13
