--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm-panache-kotlin.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm-panache-kotlin.adoc:6
 #, no-wrap
 msgid "Quarkus - Simplified Hibernate ORM with Panache and Kotlin"
-msgstr ""
+msgstr "Quarkus - PanacheとKotlinでシンプルになったHibernate ORM"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm-panache-kotlin.adoc:15
