--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm-panache.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm-panache.adoc:6
 #, no-wrap
 msgid "Quarkus - Simplified Hibernate ORM with Panache"
-msgstr ""
+msgstr "Quarkus - PanacheでシンプルになったHibernate ORM"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm-panache.adoc:14
