Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kotlin.adoc.po
@@ -769,7 +769,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kotlin.adoc:407
 #, no-wrap
 msgid "Comments"
-msgstr ""
+msgstr "Comments"
 
 #. type: Table
 #: upstream/_versions/main/guides/kotlin.adoc:408
