--- a/l10n/po/ja_JP/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc.po
@@ -111,7 +111,7 @@ msgstr "変更点"
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:27
 #, no-wrap
 msgid "Assertj out of the BOM"
-msgstr "BOMからAssertjを取り外し"
+msgstr "BOMからAssertjを除外"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:30
