--- a/l10n/po/ja_JP/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc.po
@@ -126,7 +126,7 @@ msgstr "そこで、今後は、プロジェクトでバージョンを定義す
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:35
 msgid "Now, we can get to more exciting things!"
-msgstr "さあ、もっとエキサイティングなことをしましょう!"
+msgstr "さあ、もっとエキサイティングな話をしましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-12-quarkus-2-8-0-final-released.adoc:40
