Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kubernetes.adoc.po
@@ -3606,7 +3606,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kubernetes.adoc:1928
 #, no-wrap
 msgid "`deployment`"
-msgstr ""
+msgstr "`deployment`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes.adoc:1933
