--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -20779,7 +20779,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:12067
 #, no-wrap
 msgid "`deployment`"
-msgstr ""
+msgstr "`deployment`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:12072
