--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-kubernetes-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-kubernetes-config.adoc.po
@@ -216,7 +216,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-kubernetes-config.adoc:47
 #, no-wrap
 msgid "`deployment`"
-msgstr ""
+msgstr "`deployment`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-kubernetes-config.adoc:52
