--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kubernetes-kubernetes-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kubernetes-kubernetes-config.adoc.po
@@ -215,7 +215,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-kubernetes-config.adoc:47
 #, no-wrap
 msgid "`deployment`"
-msgstr ""
+msgstr "`deployment`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-kubernetes-config.adoc:52
