--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes.adoc.po
@@ -3621,7 +3621,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes.adoc:1937
 #, no-wrap
 msgid "`deployment`"
-msgstr ""
+msgstr "`deployment`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes.adoc:1942
