Update some translations

--- a/l10n/po/ja_JP/_guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_guides/neo4j.adoc.po
@@ -260,7 +260,7 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:115
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:117
