--- a/l10n/po/ja_JP/_guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_guides/websockets.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-03-09 21:10+0000\n"
-"PO-Revision-Date: 2022-02-04 14:30+0900\n"
+"PO-Revision-Date: 2022-04-14 14:28+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -28,7 +28,7 @@ msgstr "WebSocketの使用"
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:12
 msgid "This guide explains how your Quarkus application can utilize web sockets to create interactive web applications.  Because it's the _canonical_ web socket application, we are going to create a simple chat application."
-msgstr "このガイドでは、QuarkusアプリケーションがWebSocketを利用してインタラクティブなウェブアプリケーションを作成する方法を説明します。 _定型的な_ WebSocketアプリケーションなので、簡単なチャットアプリケーションを作成します。"
+msgstr "このガイドでは、QuarkusアプリケーションがWebSocketを利用してインタラクティブなウェブアプリケーションを作成する方法を説明します。 _定型的な_ WebSocketアプリケーションを想定し、簡単なチャットアプリケーションを作成します。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:13
@@ -86,20 +86,18 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:41
-#, fuzzy
 msgid "This command generates the project (without any classes) and imports the `websockets` extension."
-msgstr "このコマンドは、Mavenプロジェクト(クラスなし)を生成し、 `undertow-websockets` エクステンションをインポートします。"
+msgstr "このコマンドは、Mavenプロジェクト(クラスなし)を生成し、 `websockets` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:44
 msgid "If you already have your Quarkus project configured, you can add the `websockets` extension to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `undertow-websockets` エクステンションを追加することができます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `websockets` エクステンションを追加することができます。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:49
-#, fuzzy
 msgid "This will add the following to your build file:"
-msgstr "これにより、 `pom.xml` に以下が追加されます:"
+msgstr "これにより、ビルドファイルに以下が追加されます:"
 
 #. type: Block title
 #: upstream/_guides/websockets.adoc:51
@@ -274,7 +272,7 @@ msgstr "洗練されたWebフロントエンド"
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:141
 msgid "All chat applications need a _nice_ UI, well, this one may not be that nice, but does the work.  Quarkus automatically serves static resources contained in the `META-INF/resources` directory.  Create the `src/main/resources/META-INF/resources` directory and copy this {quickstarts-blob-url}/websockets-quickstart/src/main/resources/META-INF/resources/index.html[index.html] file in it."
-msgstr "すべてのチャットアプリケーションには _素敵な_ UIが必要です。Quarkusは、 `META-INF/resources` ディレクトリーに含まれる静的リソースを自動的に提供します。 `src/main/resources/META-INF/resources` ディレクトリーを作成し、この {quickstarts-blob-url}/websockets-quickstart/src/main/resources/META-INF/resources/index.html[index.html] ファイルをコピーします。"
+msgstr "すべてのチャットアプリケーションには _素敵な_ UIが必要です。Quarkusは、 `META-INF/resources` ディレクトリーに含まれる静的リソースを自動的にサービスします。 `src/main/resources/META-INF/resources` ディレクトリーを作成し、この {quickstarts-blob-url}/websockets-quickstart/src/main/resources/META-INF/resources/index.html[index.html] ファイルをコピーします。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:142
@@ -319,7 +317,6 @@ msgstr "いつものように、アプリケーションは以下の方法でパ
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:161
-#, fuzzy
 msgid "And executed using `java -jar target/quarkus-app/quarkus-run.jar`."
 msgstr "そして、 `java -jar target/quarkus-app/quarkus-run.jar` を使って実行します。"
 
@@ -331,7 +328,7 @@ msgstr "ネイティブ実行可能ファイルを次のようにビルドする
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:167
 msgid "You can also test your web socket applications using the approach detailed {quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[here]."
-msgstr "また、{quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[こちら]で詳細に解説された手法を使用して、Webソケットアプリケーションをテストすることもできます。"
+msgstr "また、{quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/websockets/ChatTest.java[こちら] で詳細に解説された手法を使用して、Webソケットアプリケーションをテストすることもできます。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:168
