--- a/l10n/po/ja_JP/_guides/amazon-dynamodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-dynamodb.adoc.po
@@ -181,7 +181,7 @@ msgstr "ここで構築したアプリケーションでは、Amazon DynamoDBに
 #. type: Plain text
 #: upstream/_guides/amazon-dynamodb.adoc:92
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-dynamodb.adoc:94
