--- a/l10n/po/ja_JP/_guides/kogito-pmml.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-pmml.adoc.po
@@ -99,7 +99,7 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:46
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the complete example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-pmml.adoc:48
