--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -56,7 +56,7 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:29
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can skip right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、すぐに完成した例に飛んでも構いません。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、すぐに完成した例に飛んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:31
