--- a/l10n/po/ja_JP/_guides/tika.adoc.po
+++ b/l10n/po/ja_JP/_guides/tika.adoc.po
@@ -100,7 +100,7 @@ msgstr "ソリューション"
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:42
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr "次の章で紹介する手順に沿い、順を追ってアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr "次のセクションで紹介する手順に沿い、順を追ってアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:44
