--- a/l10n/po/ja_JP/_versions/1.7/guides/amazon-s3.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/amazon-s3.adoc.po
@@ -165,7 +165,7 @@ msgstr "ここで構築したアプリケーションでは、Amazon S3に保存
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:71
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:73
