--- a/l10n/po/ja_JP/_versions/1.7/guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/kafka-streams.adoc.po
@@ -173,7 +173,7 @@ msgstr "ソリューション"
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/kafka-streams.adoc:75
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/kafka-streams.adoc:77
