--- a/l10n/po/ja_JP/_versions/1.7/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-jwt.adoc.po
@@ -44,7 +44,7 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:21
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can skip right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、すぐに完成した例に飛んでも構いません。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、すぐに完成した例に飛んでも構いません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:23
