--- a/l10n/po/ja_JP/_versions/1.7/guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/tests-with-coverage.adoc.po
@@ -111,7 +111,7 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:49
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step. However, you can go right to the completed example.  Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。しかし、完成した例にすぐに進むことができます。Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または {quickstarts-archive-url}[archive] をダウンロードします。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。しかし、完成した例にすぐに進むことができます。Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または {quickstarts-archive-url}[archive] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:51
