Update some translations

--- a/l10n/po/ja_JP/_guides/config-extending-support.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-extending-support.adoc.po
@@ -307,7 +307,7 @@ msgstr "STATIC INIT"
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:130
 msgid "Quarkus starts some of its services during static initialization, and `Config` is usually one of the first things that is created. In certain situations it may not be possible to add a custom `ConfigSource`. For instance, if the `ConfigSource` requires other services, like a database access, it will not be available at this stage, and cause a chicken-egg problem. For this reason, any custom `ConfigSource` requires the annotation `@io.quarkus.runtime.configuration.StaticInitSafe` to mark the source as safe to be used at this stage."
-msgstr "Quarkusは静的初期化中にいくつかのサービスを開始しますが、 `Config` は通常、最初に作成されるものの1つです。特定の状況では、カスタムの `ConfigSource` を追加できない場合があります。例えば、 `ConfigSource` がデータベースアクセスのような他のサービスを必要とする場合、この段階では利用できず、鶏と卵の問題が発生してしまいます。このため、カスタム `ConfigSource` には、この段階で使用しても安全であるとソースをマークするための注釈 `@io.quarkus.runtime.configuration.StaticInitSafe` が必要です。"
+msgstr "Quarkusは静的初期化中にいくつかのサービスを開始しますが、 `Config` は通常、最初に作成されるものの1つです。特定の状況では、カスタムの `ConfigSource` を追加できない場合があります。例えば、 `ConfigSource` がデータベースアクセスのような他のサービスを必要とする場合、この段階では利用できず、鶏と卵の問題が発生してしまいます。このため、カスタム `ConfigSource` には、この段階で使用しても安全であるとソースをマークするためのアノテーション `@io.quarkus.runtime.configuration.StaticInitSafe` が必要です。"
 
 #. type: Plain text
 #: upstream/_guides/config-extending-support.adoc:134
