--- a/l10n/po/ja_JP/_guides/hibernate-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-reactive.adoc.po
@@ -3,39 +3,37 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-14 14:40+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/hibernate-reactive.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using Hibernate Reactive"
-msgstr "Hibernateの使用法 リアクティブ"
+msgstr "Hibernate Reactiveの使用"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:14
-#, fuzzy
 msgid "link:https://hibernate.org/reactive/[Hibernate Reactive] is a reactive API for Hibernate ORM, supporting non-blocking database drivers and a reactive style of interaction with the database."
 msgstr "link:https://hibernate.org/reactive/[Hibernate Reactive]は、Hibernate ORMのリアクティブAPIで、ノンブロッキングのデータベースドライバと、データベースとのインタラクションのリアクティブなスタイルをサポートしています。"
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-reactive.adoc:20
-#, fuzzy
 msgid "Hibernate Reactive works with the same annotations and most of the configuration described in the xref:quarkus-hibernate-orm.adoc[Hibernate ORM guide]. This guide will only focus on what's specific for Hibernate Reactive."
-msgstr "Hibernate Reactiveは、 link:quarkus-hibernate-orm.html[Hibernate ORMガイド]で説明されている同じアノテーションとほとんどの設定で動作します。このガイドでは、Hibernate Reactiveに特有のものにのみ焦点を当てます。"
+msgstr "Hibernate Reactiveは、 link:quarkus-hibernate-orm.html[Hibernate ORMガイド]で説明されている同じアノテーションと、ほとんどの設定で動作します。このガイドでは、Hibernate Reactiveに特有のものにのみ焦点を当てます。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-reactive.adoc:22
@@ -55,32 +53,29 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:30
-#, fuzzy
 msgid "The solution is located in the `hibernate-reactive-quickstart` {quickstarts-tree-url}/hibernate-reactive-quickstart[directory]."
-msgstr "ソリューションは `hibernate-reactive-quickstart` {quickstarts-tree-url}/hibernate-reactive-quickstart[directory]にあります。"
+msgstr "ソリューションは `hibernate-reactive-quickstart` {quickstarts-tree-url}/hibernate-reactive-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-reactive.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting up and configuring Hibernate Reactive"
-msgstr "Hibernate Reactiveの設定と構成"
+msgstr "Hibernate Reactiveのセットアップと設定"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:35
-#, fuzzy
 msgid "When using Hibernate Reactive in Quarkus, you need to:"
-msgstr "QuarkusでHibernate Reactiveを使用する場合、以下のことが必要です。"
+msgstr "QuarkusでHibernate Reactiveを使用する場合、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:37
 msgid "add your configuration settings in `{config-file}`"
-msgstr "`{config-file}` に設定を追加します。"
+msgstr "`{config-file}` に設定を追加"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:38
-#, fuzzy
 msgid "annotate your entities with `@Entity` and any other mapping annotations as usual"
-msgstr "エンティティに `@Entity` やその他のマッピングアノテーションを通常通り付与します。"
+msgstr "エンティティに `@Entity` やその他のマッピングアノテーションを通常通り付与"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:40
@@ -94,39 +89,33 @@ msgstr "以下の依存関係をプロジェクトに追加してください:"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:44
-#, fuzzy
 msgid "the Hibernate Reactive extension: `io.quarkus:quarkus-hibernate-reactive`"
-msgstr "は、Hibernate Reactive エクステンションです。 `io.quarkus:quarkus-hibernate-reactive`"
+msgstr "Hibernate Reactive エクステンション: `io.quarkus:quarkus-hibernate-reactive`"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:45
-#, fuzzy
 msgid "the xref:reactive-sql-clients.adoc[Reactive SQL client extension] for the database of your choice; the following options are available:"
-msgstr "は、選択したデータベース用の link:reactive-sql-clients.html[Reactive SQLクライアントエクステンション]で、以下のオプションが利用できます。"
+msgstr "選択したデータベース用の link:reactive-sql-clients.html[Reactive SQLクライアントエクステンション]。以下のオプションが利用できます:"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:46
-#, fuzzy
 msgid "`quarkus-reactive-pg-client`: link:https://vertx.io/docs/vertx-pg-client/java[the client for PostgreSQL or CockroachDB]"
-msgstr "`quarkus-reactive-pg-client`: link:https://vertx.io/docs/vertx-pg-client/java[PostgreSQLやCockroachDBのクライアント]です。"
+msgstr "`quarkus-reactive-pg-client`: link:https://vertx.io/docs/vertx-pg-client/java[PostgreSQLやCockroachDBのクライアント]"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:47
-#, fuzzy
 msgid "`quarkus-reactive-mysql-client`: link:https://vertx.io/docs/vertx-mysql-client/java[the client MySQL or MariaDB]"
-msgstr "`quarkus-reactive-mysql-client`: link:https://vertx.io/docs/vertx-mysql-client/java[クライアント MySQL または MariaDB]"
+msgstr "`quarkus-reactive-mysql-client`: link:https://vertx.io/docs/vertx-mysql-client/java[MySQL または MariaDBのクライアント]"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:48
-#, fuzzy
 msgid "`quarkus-reactive-mssql-client`: link:https://vertx.io/docs/vertx-mssql-client/java[the client for Microsoft SQL Server]"
-msgstr "`quarkus-reactive-mssql-client`: link:https://vertx.io/docs/vertx-mssql-client/java[Microsoft SQL Server のクライアント]です。"
+msgstr "`quarkus-reactive-mssql-client`: link:https://vertx.io/docs/vertx-mssql-client/java[Microsoft SQL Server のクライアント]"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:49
-#, fuzzy
 msgid "`quarkus-reactive-db2-client`: link:https://vertx.io/docs/vertx-db2-client/java[the client for IBM Db2]"
-msgstr "`quarkus-reactive-db2-client`: link:https://vertx.io/docs/vertx-db2-client/java[IBM Db2 のクライアント]です。"
+msgstr "`quarkus-reactive-db2-client`: link:https://vertx.io/docs/vertx-db2-client/java[IBM Db2 のクライアント]"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:51
@@ -185,9 +174,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:80
-#, fuzzy
 msgid "Annotate your persistent objects with `@Entity`, then add the relevant configuration properties in `{config-file}`:"
-msgstr "`@Entity` でパーシステント・オブジェクトに注釈を付け、 `{config-file}` で関連する構成プロパティを追加します。"
+msgstr "`@Entity` でパーシステント・オブジェクトにアノテーションを付け、 `{config-file}` で関連する構成プロパティを追加します。"
 
 #. type: Block title
 #: upstream/_guides/hibernate-reactive.adoc:82
