--- a/l10n/po/ja_JP/_guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute-reference.adoc.po
@@ -3817,7 +3817,7 @@ msgstr "名前空間は、英数字とアンダースコアのみで構成され
 #: upstream/_guides/qute-reference.adoc:1741
 #, fuzzy, no-wrap
 msgid "Class Annotated With `@TemplateData`"
-msgstr "で注釈をつけたクラス `@TemplateData`"
+msgstr "でアノテーションをつけたクラス `@TemplateData`"
 
 #. type: delimited block -
 #: upstream/_guides/qute-reference.adoc:1745
