--- a/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -458,7 +458,7 @@ msgstr "Reactive Routesの使用"
 #: upstream/_guides/reactive-routes.adoc:215
 #, fuzzy
 msgid "A route method must be a non-private non-static method of a CDI bean.  If the annotated method returns `void` then it has to accept at least one argument - see the supported types below.  If the annotated method does not return `void` then the arguments are optional."
-msgstr "ルートメソッドは、CDI Bean の非プライベート非静的メソッドでなければなりません。注釈付きのメソッドが `void` を返す場合、少なくとも1つの引数を受け入れなければなりません - 以下のサポートされるタイプを参照してください。注釈付きメソッドが `void` を返さない場合，引数は任意である。"
+msgstr "ルートメソッドは、CDI Bean の非プライベート非静的メソッドでなければなりません。アノテーション付きのメソッドが `void` を返す場合、少なくとも1つの引数を受け入れなければなりません - 以下のサポートされるタイプを参照してください。アノテーション付きメソッドが `void` を返さない場合，引数は任意である。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-routes.adoc:218
