--- a/l10n/po/ja_JP/_posts/2020-01-28-vscode-quarkus-1.3.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-28-vscode-quarkus-1.3.0.adoc.po
@@ -194,7 +194,7 @@ msgstr "Javaソースでの `@ConfigProperty` 名のホバーサポート"
 #: upstream/_posts/2020-01-28-vscode-quarkus-1.3.0.adoc:65
 #, fuzzy
 msgid "Hovering over the name value in a `@ConfigProperty` annotation will now display the value of the hovered property. Currently, the value will either come from the `application.properties` file, or the default value field."
-msgstr "`@ConfigProperty` の注釈で名前の値にカーソルを合わせると、カーソルを合わせたプロパティの値が表示されるようになりました。現在のところ、値は `application.properties` ファイルから取得するか、デフォルトの値フィールドになります。"
+msgstr "`@ConfigProperty` のアノテーションで名前の値にカーソルを合わせると、カーソルを合わせたプロパティの値が表示されるようになりました。現在のところ、値は `application.properties` ファイルから取得するか、デフォルトの値フィールドになります。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2020-01-28-vscode-quarkus-1.3.0.adoc:66
