--- a/l10n/po/ja_JP/_versions/1.11/guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/config-reference.adoc.po
@@ -517,7 +517,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/config-reference.adoc:214
 msgid "The `@ConfigProperty` annotation is needed because the name of the configuration property that the method corresponds to doesn't follow the getter method naming conventions."
-msgstr "メソッドが対応する構成プロパティーの名前が getter メソッドの命名規則に従っていないため、 `@ConfigProperty` 注釈が必要です。"
+msgstr "メソッドが対応する構成プロパティーの名前が getter メソッドの命名規則に従っていないため、 `@ConfigProperty` アノテーションが必要です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/config-reference.adoc:215
