--- a/l10n/po/ja_JP/_versions/1.11/guides/http-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/http-reference.adoc.po
@@ -417,7 +417,7 @@ msgstr "quarkus.http.cors.access-control-max-ag"
 msgid ""
 "The duration (see note below) indicating how long the results of a pre-flight request can be cached.\n"
 "This value will be returned in a `Access-Control-Max-Age` response header."
-msgstr "プリフライトリクエストの結果がキャッシュされる時間を示す持続時間 (以下の注釈を参照)。この値は `Access-Control-Max-Age` 応答ヘッダーで返されます。"
+msgstr "プリフライトリクエストの結果がキャッシュされる時間を示す持続時間 (以下のアノテーションを参照)。この値は `Access-Control-Max-Age` 応答ヘッダーで返されます。"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/http-reference.adoc:188
