--- a/l10n/po/ja_JP/_versions/1.7/guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/cdi-reference.adoc.po
@@ -1412,7 +1412,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:611
 msgid "In Quarkus, you can skip the `@Produces` annotation completely if the producer method is annotated with a scope annotation, a stereotype or a qualifier."
-msgstr "Quarkus では、producer メソッドにスコープ注釈、ステレオタイプ、または修飾子が付いている場合は、`@Produces` アノテーションを完全に省略できます。"
+msgstr "Quarkus では、producer メソッドにスコープアノテーション、ステレオタイプ、または修飾子が付いている場合は、`@Produces` アノテーションを完全に省略できます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:624
@@ -1439,7 +1439,7 @@ msgstr "静的メソッドのインターセプション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:632
 msgid "The Interceptors specification is clear that _around-invoke_ methods must not be declared static.  However, this restriction was driven mostly by technical limitations.  And since Quarkus is a build-time oriented stack that allows for additional class transformations, those limitations don't apply anymore.  It's possible to annotate a non-private static method with an interceptor binding:"
-msgstr "インターセプターの仕様は、_around-invoke_ メソッドを静的宣言してはならないことは明らかです。しかし、この制限は、主に技術的な制限によって設定されました。Quarkus は追加のクラス変換を可能にするビルド時指向のスタックであるため、この制限は適用されなくなりました。インターセプタ―バインディングで非プライベートの静的メソッドに注釈を付けることができます。"
+msgstr "インターセプターの仕様は、_around-invoke_ メソッドを静的宣言してはならないことは明らかです。しかし、この制限は、主に技術的な制限によって設定されました。Quarkus は追加のクラス変換を可能にするビルド時指向のスタックであるため、この制限は適用されなくなりました。インターセプタ―バインディングで非プライベートの静的メソッドにアノテーションを付けることができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:636
