--- a/l10n/po/ja_JP/_versions/2.2/guides/funqy-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/funqy-http.adoc.po
@@ -96,7 +96,7 @@ msgstr "コード"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/funqy-http.adoc:41
 msgid "If you look at the Java code, you'll see that there is no HTTP specific API.  Its just simple Java methods annotated with `@Funq`.  Simple, easy, straightforward."
-msgstr "Javaコードを見ると、HTTP固有のAPIがないことがわかります。単純な Java メソッドに `@Funq` と注釈が付けられているだけです。シンプルで、簡単で、わかりやすいです。"
+msgstr "Javaコードを見ると、HTTP固有のAPIがないことがわかります。単純な Java メソッドに `@Funq` とアノテーションが付けられているだけです。シンプルで、簡単で、わかりやすいです。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/funqy-http.adoc:42
