--- a/l10n/po/ja_JP/_versions/main/guides/reactive-event-bus.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/reactive-event-bus.adoc.po
@@ -190,7 +190,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/reactive-event-bus.adoc:93
 msgid "Alternatively, you can annotate your method with `@io.smallrye.common.annotation.Blocking`:"
-msgstr "あるいは、メソッドに `@io.smallrye.common.annotation.Blocking` と注釈を付けることもできます。"
+msgstr "あるいは、メソッドに `@io.smallrye.common.annotation.Blocking` とアノテーションを付けることもできます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/reactive-event-bus.adoc:100
