Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
@@ -28,12 +28,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:14
 msgid "link:https://hibernate.org/reactive/[Hibernate Reactive] is a reactive API for Hibernate ORM, supporting non-blocking database drivers and a reactive style of interaction with the database."
-msgstr ""
+msgstr "link:https://hibernate.org/reactive/[Hibernate Reactive]は、Hibernate ORMのリアクティブAPIで、ノンブロッキングのデータベースドライバと、データベースとのインタラクションのリアクティブなスタイルをサポートしています。"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:20
 msgid "Hibernate Reactive works with the same annotations and most of the configuration described in the xref:quarkus-hibernate-orm.adoc[Hibernate ORM guide]. This guide will only focus on what's specific for Hibernate Reactive."
-msgstr ""
+msgstr "Hibernate Reactiveは、 link:quarkus-hibernate-orm.html[Hibernate ORMガイド]で説明されている同じアノテーションと、ほとんどの設定で動作します。このガイドでは、Hibernate Reactiveに特有のものにのみ焦点を当てます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:22
@@ -54,7 +54,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:30
 msgid "The solution is located in the `hibernate-reactive-quickstart` {quickstarts-tree-url}/hibernate-reactive-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `hibernate-reactive-quickstart` {quickstarts-tree-url}/hibernate-reactive-quickstart[ディレクトリ]にあります。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:32
@@ -90,12 +90,12 @@ msgstr "以下の依存関係をプロジェクトに追加してください:"
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:44
 msgid "the Hibernate Reactive extension: `io.quarkus:quarkus-hibernate-reactive`"
-msgstr ""
+msgstr "Hibernate Reactive エクステンション: `io.quarkus:quarkus-hibernate-reactive`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:45
 msgid "the xref:reactive-sql-clients.adoc[Reactive SQL client extension] for the database of your choice; the following options are available:"
-msgstr ""
+msgstr "選択したデータベース用の link:reactive-sql-clients.html[Reactive SQLクライアントエクステンション]。以下のオプションが利用できます:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:46
@@ -175,7 +175,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:80
 msgid "Annotate your persistent objects with `@Entity`, then add the relevant configuration properties in `{config-file}`:"
-msgstr ""
+msgstr "`@Entity` でパーシステント・オブジェクトにアノテーションを付け、 `{config-file}` で関連する構成プロパティを追加します。"
 
 #. type: Block title
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:82
