--- a/l10n/po/ja_JP/_versions/main/guides/spring-scheduled.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-scheduled.adoc.po
@@ -448,7 +448,7 @@ msgstr "いつものように、アプリケーションは以下の方法でパ
 #. type: Plain text
 #: upstream/_versions/main/guides/spring-scheduled.adoc:207
 msgid "And executed using `java -jar target/quarkus-app/quarkus-run.jar`."
-msgstr ""
+msgstr "そして、 `java -jar target/quarkus-app/quarkus-run.jar` を使って実行します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/spring-scheduled.adoc:209
