--- a/l10n/po/ja_JP/_guides/hibernate-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-reactive.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2022-04-14 14:40+0900\n"
+"PO-Revision-Date: 2022-04-14 17:06+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -209,55 +209,47 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:96
-#, fuzzy
 msgid "The only different property from a Hibernate ORM configuration"
-msgstr "Hibernate ORMの設定と唯一異なるプロパティは"
+msgstr "Hibernate ORMの設定と唯一異なるプロパティ"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:99
-#, fuzzy
 msgid "Note that these configuration properties are not the same ones as in your typical Hibernate Reactive configuration file.  They will often map to Hibernate Reactive configuration properties but could have different names and don't necessarily map 1:1 to each other."
-msgstr "これらの設定プロパティは、典型的なHibernate Reactive設定ファイルにあるものと同じではないことに注意してください。これらはしばしばHibernate Reactive構成プロパティにマッピングされますが、名前が異なる可能性があり、必ずしも1対1でマッピングされるわけではありません。"
+msgstr "これらの設定プロパティは、典型的なHibernate Reactive設定ファイルにあるものと同じではないことに注意してください。これらはしばしばHibernate Reactive設定プロパティにマッピングされますが、名前が異なる可能性があり、必ずしも1対1でマッピングされるわけではありません。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:101
-#, fuzzy
 msgid "Also, Quarkus will set many Hibernate Reactive configuration settings automatically, and will often use more modern defaults."
 msgstr "また、Quarkusは多くのHibernate Reactiveの設定を自動的に行い、より現代的なデフォルトを使用することが多いです。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:103
-#, fuzzy
 msgid "Configuring Hibernate Reactive using the standard `persistence.xml` configuration file is not supported."
 msgstr "標準の `persistence.xml` 設定ファイルを使用してHibernate Reactiveを設定することはサポートされていません。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:105
-#, fuzzy
 msgid "Please, see section <<hr-configuration-properties, Hibernate Reactive configuration properties>> for the list of properties you can set in `{config-file}`."
-msgstr "`{config-file}` で設定できるプロパティのリストについては、「 link:#hr-configuration-properties[Hibernate Reactive 設定プロパティ]」のセクションを参照してください。"
+msgstr "`{config-file}` で設定できるプロパティのリストについては、<<hr-configuration-properties, Hibernate Reactive 設定プロパティ>> のセクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:107
-#, fuzzy
 msgid "A `Mutiny.SessionFactory` will be created based on the Quarkus `datasource` configuration as long as the Hibernate Reactive extension is listed among your project dependencies."
 msgstr "プロジェクトの依存関係の中にHibernate Reactiveエクステンションがリストアップされていれば、Quarkus `datasource` の設定に基づいて `Mutiny.SessionFactory` が作成されます。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:109
-#, fuzzy
 msgid "The dialect will be selected based on the Reactive SQL client - unless you set one explicitly."
-msgstr "方言は、Reactive SQLクライアントに基づいて選択されます（明示的に設定しない限り）。"
+msgstr "dialectは、Reactive SQLクライアントに基づいて選択されます（明示的に設定しない限り）。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:111
-#, fuzzy
 msgid "You can then happily inject your `Mutiny.SessionFactory`:"
-msgstr "その後、 `Mutiny.SessionFactory` を喜んで注入することができます。"
+msgstr "その後、 `Mutiny.SessionFactory` を注入することができます。"
 
 #. type: Block title
 #: upstream/_guides/hibernate-reactive.adoc:113
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example application bean using Hibernate Reactive"
 msgstr "Hibernate Reactiveを使用したアプリケーションBeanの例"
 
@@ -285,25 +277,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:129
-#, fuzzy
 msgid "Inject your session factory and have fun"
 msgstr "セッションファクトリを注入して楽しもう"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:130
-#, fuzzy
 msgid "`.withTransaction()` will automatically flush at commit"
 msgstr "`.withTransaction()` はコミット時に自動的にフラッシュされます。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:132
-#, fuzzy
 msgid "Make sure to wrap methods modifying your database (e.g. `session.persist(entity)`) within a transaction."
-msgstr "データベースを変更するメソッド（例： `session.persist(entity)` ）は、必ずトランザクション内でラップしてください。"
+msgstr "データベースを変更するメソッド（例： `session.persist(entity)` ）は、必ずトランザクション内にラップしてください。"
 
 #. type: Block title
 #: upstream/_guides/hibernate-reactive.adoc:134
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example of an Entity"
 msgstr "エンティティの例"
 
@@ -359,7 +348,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:165
-#, fuzzy
 msgid "To load SQL statements when Hibernate Reactive starts, add an `import.sql` file in your `src/main/resources/` directory.  This script can contain any SQL DML statements.  Make sure to terminate each statement with a semicolon."
 msgstr "Hibernate Reactive の起動時に SQL 文をロードするには、 `src/main/resources/` ディレクトリに `import.sql` ファイルを追加します。このスクリプトには、任意の SQL DML ステートメントを含めることができます。各ステートメントは必ずセミコロンで終了させてください。"
 
@@ -370,19 +358,17 @@ msgstr "テストやデモ用のデータセットを用意しておくと便利
 
 #. type: Title ===
 #: upstream/_guides/hibernate-reactive.adoc:169
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Hibernate Reactive configuration properties"
-msgstr "Hibernate Reactiveの構成プロパティ"
+msgstr "Hibernate Reactiveの設定プロパティ"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:172
-#, fuzzy
 msgid "There are various optional properties useful to refine your session factory or guide Quarkus' guesses."
 msgstr "セッションファクトリを改良したり、Quarkusの推測を導くのに役立つ様々なオプションのプロパティがあります。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:175
-#, fuzzy
 msgid "When no properties are set, Quarkus can typically infer everything it needs to setup Hibernate Reactive and will have it use the default datasource."
 msgstr "プロパティが設定されていない場合、Quarkusは通常、Hibernate Reactiveのセットアップに必要なすべてを推測し、デフォルトのデータソースを使用するようにします。"
 
@@ -393,13 +379,11 @@ msgstr "ここに記載されている設定プロパティーでは、このよ
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:180
-#, fuzzy
 msgid "Hibernate Reactive uses the same properties you would use for Hibernate ORM. You will notice that some properties contain `jdbc` in the name but there is not JDBC in Hibernate Reactive, these are simply legacy property names."
 msgstr "Hibernate Reactiveでは、Hibernate ORMで使用するのと同じプロパティを使用します。いくつかのプロパティの名前に `jdbc` が含まれていることに気づくと思いますが、Hibernate Reactive には JDBC は存在せず、これらは単に従来のプロパティ名です。"
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-reactive.adoc:186
-#, fuzzy
 msgid "Want to start a PostgreSQL server on the side with Docker?"
 msgstr "PostgreSQLサーバをDockerで起動したいですか？"
 
@@ -419,13 +403,12 @@ msgstr "これは、永続化されない空のデータベースを起動しま
 
 #. type: Title ====
 #: upstream/_guides/hibernate-reactive.adoc:198
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "CDI integration"
-msgstr "CDIの統合"
+msgstr "CDI統合"
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-reactive.adoc:201
-#, fuzzy
 msgid "If you are familiar with using Hibernate Reactive in Quarkus, you probably already have injected the `Mutiny.SessionFactory` using CDI:"
 msgstr "QuarkusでHibernate Reactiveを使用することに慣れている方は、CDIを使用して `Mutiny.SessionFactory` を注入したことがあると思います。"
 
@@ -439,13 +422,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:209
-#, fuzzy
 msgid "This will inject the `Mutiny.SessionFactory` of the default persistence unit."
-msgstr "これにより、デフォルトのパーシスタンス・ユニットの `Mutiny.SessionFactory` が注入されます。"
+msgstr "これにより、デフォルトの永続化ユニットの `Mutiny.SessionFactory` が注入されます。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:211
-#, fuzzy
 msgid "You can also inject an instance of `Uni<Mutiny.Session>` using the exact same mechanism:"
 msgstr "また、全く同じ仕組みで `Uni<Mutiny.Session>` のインスタンスを注入することもできます。"
 
@@ -465,54 +446,46 @@ msgstr "制限事項など知っておくべきこと"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:223
-#, fuzzy
 msgid "Quarkus does not modify the libraries it uses; this rule applies to Hibernate Reactive as well: when using this extension you will mostly have the same experience as using the original library."
-msgstr "このルールはHibernate Reactiveにも適用されます。このエクステンションを使用すると、ほとんどの場合、元のライブラリを使用するのと同じ経験ができます。"
+msgstr "Quarkusは使用しているライブラリを修正しません。このルールはHibernate Reactiveにも適用されます。このエクステンションを使用すると、ほとんどの場合、元のライブラリを使用するのと同じ経験ができます。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:227
-#, fuzzy
 msgid "But while they share the same code, Quarkus does configure some components automatically and inject custom implementations for some extension points; this should be transparent and useful but if you're an expert of Hibernate Reactive you might want to know what is being done."
 msgstr "しかし、両者は同じコードを共有していますが、Quarkusはいくつかのコンポーネントを自動的に設定し、いくつかの拡張ポイントにカスタム実装を注入しています。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:229
-#, fuzzy
 msgid "Here's a list of things to pay attention when using Hibernate Reactive in Quarkus:"
 msgstr "ここでは、QuarkusでHibernate Reactiveを使用する際に注意すべき点を紹介します。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:231
-#, fuzzy
 msgid "it's not possible to configure multiple persistence units at the moment"
-msgstr "現時点では、複数のパーシスタンス・ユニットを設定することはできません。"
+msgstr "現時点では、複数の永続化ユニットを設定することはできません。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:232
-#, fuzzy
 msgid "it's not configurable via a `persistence.xml` file"
 msgstr "`persistence.xml` のファイルでは設定できません。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:233
-#, fuzzy
 msgid "integration with the Envers extension is not supported"
-msgstr "Envers拡張機能との統合はサポートされていません。"
+msgstr "Enversエクステンションとの統合はサポートされていません。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:234
-#, fuzzy
 msgid "transaction demarcation cannot be done using `javax.transaction.Transactional`"
-msgstr "を使用して、トランザクション・デマケーションを行うことはできません。 `javax.transaction.Transactional`"
+msgstr "`javax.transaction.Transactional` を使用して、トランザクション境界を行うことはできません。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-reactive.adoc:235
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Simplifying Hibernate Reactive with Panache"
-msgstr "PanacheによるHibernate Reactiveの簡素化"
+msgstr "PanacheでHibernate Reactiveをシンプルに"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive.adoc:239
-#, fuzzy
 msgid "The xref:hibernate-reactive-panache.adoc[Hibernate Reactive with Panache] extension facilitates the usage of Hibernate Reactive by providing active record style entities (and repositories) and focuses on making your entities trivial and fun to write in Quarkus."
-msgstr "link:hibernate-reactive-panache.html[Hibernate Reactive with Panache]エクステンションは、アクティブレコードスタイルのエンティティ（およびリポジトリ）を提供することで、Hibernate Reactiveの使用を促進し、Quarkusでエンティティを簡単に楽しく書けるようにすることに重点を置いています。"
+msgstr "link:hibernate-reactive-panache.html[Hibernate Reactive with Panache]エクステンションは、Active Recordスタイルのエンティティ（およびリポジトリ）を提供することで、Hibernate Reactiveの使用を促進し、Quarkusでエンティティを簡単に楽しく書けるようにすることに重点を置いています。"
