Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-19 02:28+0000\n"
+"POT-Creation-Date: 2022-04-15 02:42+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1069,7 +1069,7 @@ msgstr ""
 #: upstream/_versions/main/guides/rest-client.adoc:697
 #, no-wrap
 msgid ""
-"        stubFor(get(urlEqualTo(\"/extensions?id=io.quarkus:quarkus-rest-client\"))   // <4>\n"
+"        wireMockServer.stubFor(get(urlEqualTo(\"/extensions?id=io.quarkus:quarkus-rest-client\"))   // <4>\n"
 "                .willReturn(aResponse()\n"
 "                        .withHeader(\"Content-Type\", \"application/json\")\n"
 "                        .withBody(\n"
@@ -1083,7 +1083,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/rest-client.adoc:699
 #, no-wrap
-msgid "        stubFor(get(urlMatching(\".*\")).atPriority(10).willReturn(aResponse().proxiedFrom(\"https://stage.code.quarkus.io/api\")));   // <5>\n"
+msgid "        wireMockServer.stubFor(get(urlMatching(\".*\")).atPriority(10).willReturn(aResponse().proxiedFrom(\"https://stage.code.quarkus.io/api\")));   // <5>\n"
 msgstr ""
 
 #. type: delimited block -
