Apply translation memory

--- a/l10n/po/ja_JP/_versions/2.2/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/hibernate-orm.adoc.po
@@ -382,7 +382,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/hibernate-orm.adoc:181
 msgid "Want to start a PostgreSQL server on the side with Docker?"
-msgstr ""
+msgstr "PostgreSQLサーバをDockerで起動したいですか？"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/hibernate-orm.adoc:187
