--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-orm.adoc.po
@@ -401,7 +401,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/hibernate-orm.adoc:191
 msgid "Want to start a PostgreSQL server on the side with Docker?"
-msgstr ""
+msgstr "PostgreSQLサーバをDockerで起動したいですか？"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm.adoc:197
