--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
@@ -210,42 +210,42 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:96
 msgid "The only different property from a Hibernate ORM configuration"
-msgstr ""
+msgstr "Hibernate ORMの設定と唯一異なるプロパティ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:99
 msgid "Note that these configuration properties are not the same ones as in your typical Hibernate Reactive configuration file.  They will often map to Hibernate Reactive configuration properties but could have different names and don't necessarily map 1:1 to each other."
-msgstr ""
+msgstr "これらの設定プロパティは、典型的なHibernate Reactive設定ファイルにあるものと同じではないことに注意してください。これらはしばしばHibernate Reactive設定プロパティにマッピングされますが、名前が異なる可能性があり、必ずしも1対1でマッピングされるわけではありません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:101
 msgid "Also, Quarkus will set many Hibernate Reactive configuration settings automatically, and will often use more modern defaults."
-msgstr ""
+msgstr "また、Quarkusは多くのHibernate Reactiveの設定を自動的に行い、より現代的なデフォルトを使用することが多いです。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:103
 msgid "Configuring Hibernate Reactive using the standard `persistence.xml` configuration file is not supported."
-msgstr ""
+msgstr "標準の `persistence.xml` 設定ファイルを使用してHibernate Reactiveを設定することはサポートされていません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:105
 msgid "Please, see section <<hr-configuration-properties, Hibernate Reactive configuration properties>> for the list of properties you can set in `{config-file}`."
-msgstr ""
+msgstr "`{config-file}` で設定できるプロパティのリストについては、<<hr-configuration-properties, Hibernate Reactive 設定プロパティ>> のセクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:107
 msgid "A `Mutiny.SessionFactory` will be created based on the Quarkus `datasource` configuration as long as the Hibernate Reactive extension is listed among your project dependencies."
-msgstr ""
+msgstr "プロジェクトの依存関係の中にHibernate Reactiveエクステンションがリストアップされていれば、Quarkus `datasource` の設定に基づいて `Mutiny.SessionFactory` が作成されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:109
 msgid "The dialect will be selected based on the Reactive SQL client - unless you set one explicitly."
-msgstr ""
+msgstr "dialectは、Reactive SQLクライアントに基づいて選択されます（明示的に設定しない限り）。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:111
 msgid "You can then happily inject your `Mutiny.SessionFactory`:"
-msgstr ""
+msgstr "その後、 `Mutiny.SessionFactory` を注入することができます。"
 
 #. type: Block title
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:113
@@ -278,23 +278,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:129
 msgid "Inject your session factory and have fun"
-msgstr ""
+msgstr "セッションファクトリを注入して楽しもう"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:130
 msgid "`.withTransaction()` will automatically flush at commit"
-msgstr ""
+msgstr "`.withTransaction()` はコミット時に自動的にフラッシュされます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:132
 msgid "Make sure to wrap methods modifying your database (e.g. `session.persist(entity)`) within a transaction."
-msgstr ""
+msgstr "データベースを変更するメソッド（例： `session.persist(entity)` ）は、必ずトランザクション内にラップしてください。"
 
 #. type: Block title
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:134
 #, no-wrap
 msgid "Example of an Entity"
-msgstr ""
+msgstr "エンティティの例"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:140
@@ -349,7 +349,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:165
 msgid "To load SQL statements when Hibernate Reactive starts, add an `import.sql` file in your `src/main/resources/` directory.  This script can contain any SQL DML statements.  Make sure to terminate each statement with a semicolon."
-msgstr ""
+msgstr "Hibernate Reactive の起動時に SQL 文をロードするには、 `src/main/resources/` ディレクトリに `import.sql` ファイルを追加します。このスクリプトには、任意の SQL DML ステートメントを含めることができます。各ステートメントは必ずセミコロンで終了させてください。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:167
@@ -365,12 +365,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:172
 msgid "There are various optional properties useful to refine your session factory or guide Quarkus' guesses."
-msgstr ""
+msgstr "セッションファクトリを改良したり、Quarkusの推測を導くのに役立つ様々なオプションのプロパティがあります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:175
 msgid "When no properties are set, Quarkus can typically infer everything it needs to setup Hibernate Reactive and will have it use the default datasource."
-msgstr ""
+msgstr "プロパティが設定されていない場合、Quarkusは通常、Hibernate Reactiveのセットアップに必要なすべてを推測し、デフォルトのデータソースを使用するようにします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:177
@@ -380,12 +380,12 @@ msgstr "ここに記載されている設定プロパティーでは、このよ
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:180
 msgid "Hibernate Reactive uses the same properties you would use for Hibernate ORM. You will notice that some properties contain `jdbc` in the name but there is not JDBC in Hibernate Reactive, these are simply legacy property names."
-msgstr ""
+msgstr "Hibernate Reactiveでは、Hibernate ORMで使用するのと同じプロパティを使用します。いくつかのプロパティの名前に `jdbc` が含まれていることに気づくと思いますが、Hibernate Reactive には JDBC は存在せず、これらは単に従来のプロパティ名です。"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:186
 msgid "Want to start a PostgreSQL server on the side with Docker?"
-msgstr ""
+msgstr "PostgreSQLサーバをDockerで起動したいですか？"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:192
@@ -410,7 +410,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:201
 msgid "If you are familiar with using Hibernate Reactive in Quarkus, you probably already have injected the `Mutiny.SessionFactory` using CDI:"
-msgstr ""
+msgstr "QuarkusでHibernate Reactiveを使用することに慣れている方は、CDIを使用して `Mutiny.SessionFactory` を注入したことがあると思います。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:206
@@ -423,12 +423,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:209
 msgid "This will inject the `Mutiny.SessionFactory` of the default persistence unit."
-msgstr ""
+msgstr "これにより、デフォルトの永続化ユニットの `Mutiny.SessionFactory` が注入されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:211
 msgid "You can also inject an instance of `Uni<Mutiny.Session>` using the exact same mechanism:"
-msgstr ""
+msgstr "また、全く同じ仕組みで `Uni<Mutiny.Session>` のインスタンスを注入することもできます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:216
@@ -447,37 +447,37 @@ msgstr "制限事項など知っておくべきこと"
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:223
 msgid "Quarkus does not modify the libraries it uses; this rule applies to Hibernate Reactive as well: when using this extension you will mostly have the same experience as using the original library."
-msgstr ""
+msgstr "Quarkusは使用しているライブラリを修正しません。このルールはHibernate Reactiveにも適用されます。このエクステンションを使用すると、ほとんどの場合、元のライブラリを使用するのと同じ経験ができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:227
 msgid "But while they share the same code, Quarkus does configure some components automatically and inject custom implementations for some extension points; this should be transparent and useful but if you're an expert of Hibernate Reactive you might want to know what is being done."
-msgstr ""
+msgstr "しかし、両者は同じコードを共有していますが、Quarkusはいくつかのコンポーネントを自動的に設定し、いくつかの拡張ポイントにカスタム実装を注入しています。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:229
 msgid "Here's a list of things to pay attention when using Hibernate Reactive in Quarkus:"
-msgstr ""
+msgstr "ここでは、QuarkusでHibernate Reactiveを使用する際に注意すべき点を紹介します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:231
 msgid "it's not possible to configure multiple persistence units at the moment"
-msgstr ""
+msgstr "現時点では、複数の永続化ユニットを設定することはできません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:232
 msgid "it's not configurable via a `persistence.xml` file"
-msgstr ""
+msgstr "`persistence.xml` のファイルでは設定できません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:233
 msgid "integration with the Envers extension is not supported"
-msgstr ""
+msgstr "Enversエクステンションとの統合はサポートされていません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:234
 msgid "transaction demarcation cannot be done using `javax.transaction.Transactional`"
-msgstr ""
+msgstr "`javax.transaction.Transactional` を使用して、トランザクション境界を行うことはできません。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:235
@@ -488,4 +488,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:239
 msgid "The xref:hibernate-reactive-panache.adoc[Hibernate Reactive with Panache] extension facilitates the usage of Hibernate Reactive by providing active record style entities (and repositories) and focuses on making your entities trivial and fun to write in Quarkus."
-msgstr ""
+msgstr "link:hibernate-reactive-panache.html[Hibernate Reactive with Panache]エクステンションは、Active Recordスタイルのエンティティ（およびリポジトリ）を提供することで、Hibernate Reactiveの使用を促進し、Quarkusでエンティティを簡単に楽しく書けるようにすることに重点を置いています。"
