Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-lambda.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-03 02:16+0000\n"
+"POT-Creation-Date: 2022-04-19 02:45+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -86,6 +86,24 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-lambda.adoc:34
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-amazon-lambda_quarkus.lambda.expected-exceptions]]`link:#quarkus-amazon-lambda_quarkus.lambda.expected-exceptions[quarkus.lambda.expected-exceptions]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The exception classes expected to be thrown by the handler. Any exception thrown by the handler that is an instance of a class in this list will not be logged, but will otherwise be handled normally by the lambda runtime. This is useful for avoiding unnecessary stack traces while preserving the ability to log unexpected exceptions.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-amazon-lambda.adoc:35
+#, no-wrap
+msgid "list of class name"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-amazon-lambda.adoc:43
+#, no-wrap
+msgid ""
 "[[quarkus-amazon-lambda_quarkus.lambda.handler]]`link:#quarkus-amazon-lambda_quarkus.lambda.handler[quarkus.lambda.handler]`\n"
 "\n"
 "[.description]\n"
@@ -95,7 +113,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-amazon-lambda.adoc:35
+#: upstream/_generated-config/main/config/quarkus-amazon-lambda.adoc:44
 #, no-wrap
 msgid "string"
 msgstr "string"
