Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-http-http-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-http-http-build-time-config.adoc.po
@@ -508,7 +508,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-http-http-build-time-config.adoc:236
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-http-http-build-time-config.adoc:244
