Apply translation memory

--- a/l10n/po/ja_JP/_posts/2022-04-20-solving-problems-with-extensions.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-04-20-solving-problems-with-extensions.adoc.po
@@ -478,7 +478,7 @@ msgstr ""
 #: upstream/_posts/2022-04-20-solving-problems-with-extensions.adoc:241
 #, no-wrap
 msgid "Conclusion"
-msgstr ""
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-20-solving-problems-with-extensions.adoc:245
